hphp/hack/test/typecheck/array/disallow_darray_where_vector_like_array_is_required.php
<?hh

function test(): array<string> {
  return darray("tingley" => 0);
}
